...
            { goal -> goal.examDate }
        )
    )

    Column(
        modifier = modifier
            .testTag("screen_goals_overview")
    ) {
        Spacer(
            modifier = Modifier.height(22.dp)
        )
        Row(
            modifier = Modifier
...
                style = MaterialTheme.typography.titleMedium,
                fontWeight = FontWeight.Bold,
                color = TextPrimary
            )
            IconButton(
                modifier = Modifier
                    .testTag("goals_add_goal_button"),
                onClick = onAddGoalClick
            ) {
                Icon(
                    Icons.Default.Add,
                    contentDescription = "Lernziel hinzufügen",
                    tint = PurplePrimary
...
